--- a/Client/Pages/Planning/DivePlanning.razor
+++ b/Client/Pages/Planning/DivePlanning.razor
@@ -122,23 +122,23 @@
                         <br />
                         <br />
                         <div class="float-left">
-                            <span class="field-label" title="Starting Pressure Group">SPG</span>
+                            <span class="field-label">SPG</span>
                             <br />
-                            <input type="text" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Starting Pressure Group" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <div class="float-right">
-                            <span class="field-label" title="Ending pressure group">EPG</span>
+                            <span class="field-label">EPG</span>
                             <br />
-                            <input type="text" class="form-control form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Ending pressure group" class="form-control form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <div class="float-left md">
-                            <span class="field-label" title="Max Depth">MD</span>
+                            <span class="field-label">MD</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="4" />
+                            <input type="number" title="Max Depth" class="form-control form-control-lg input-6" maxlength="4" />
                             <span class="field-label">@AppState.Mesurtext</span>
                         </div>
                         <br />
@@ -146,9 +146,9 @@
                         <br />
                         <div class="bt">
                             <br />
-                            <span class="field-label" title="Bottom time (in minutes)">BT</span>
+                            <span class="field-label">BT</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="3" />
+                            <input type="number" title="Bottom time (in minutes)" class="form-control form-control-lg input-6" maxlength="3" />
                             <span class="field-label">minutes</span>
                         </div>
                     </div>
@@ -165,23 +165,23 @@
                         <br />
                         <br />
                         <div class="float-left">
-                            <span class="field-label" title="Starting Pressure Group">SPG</span>
+                            <span class="field-label">SPG</span>
                             <br />
-                            <input type="text" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Starting Pressure Group" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <div class="float-right">
-                            <span class="field-label" title="Ending pressure group">EPG</span>
+                            <span class="field-label">EPG</span>
                             <br />
-                            <input type="text" class="form-control form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Ending pressure group" class="form-control form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <div class="float-left md">
-                            <span class="field-label" title="Max Depth">MD</span>
+                            <span class="field-label">MD</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="4" />
+                            <input type="number" title="Max Depth" class="form-control form-control-lg input-6" maxlength="4" />
                             <span class="field-label">@AppState.Mesurtext</span>
                         </div>
                         <br />
@@ -189,9 +189,9 @@
                         <br />
                         <div class="bt">
                             <br />
-                            <span class="field-label" title="Bottom time (in minutes)">BT</span>
+                            <span class="field-label">BT</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="3" />
+                            <input type="number" title="Bottom time (in minutes)" class="form-control form-control-lg input-6" maxlength="3" />
                             <span class="field-label">minutes</span>
                         </div>
                     </div>
@@ -208,23 +208,23 @@
                         <br />
                         <br />
                         <div class="float-left">
-                            <span class="field-label" title="Starting Pressure Group">SPG</span>
+                            <span class="field-label">SPG</span>
                             <br />
-                            <input type="text" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Starting Pressure Group" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <div class="float-right">
-                            <span class="field-label" title="Ending pressure group">EPG</span>
+                            <span class="field-label">EPG</span>
                             <br />
-                            <input type="text" class="form-control form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Ending pressure group" class="form-control form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <div class="float-left md">
-                            <span class="field-label" title="Max Depth">MD</span>
+                            <span class="field-label">MD</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="4" />
+                            <input type="number" title="Max Depth" class="form-control form-control-lg input-6" maxlength="4" />
                             <span class="field-label">@AppState.Mesurtext</span>
                         </div>
                         <br />
@@ -232,9 +232,9 @@
                         <br />
                         <div class="bt">
                             <br />
-                            <span class="field-label" title="Bottom time (in minutes)">BT</span>
+                            <span class="field-label">BT</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="3" />
+                            <input type="number" title="Bottom time (in minutes)" class="form-control form-control-lg input-6" maxlength="3" />
                             <span class="field-label">minutes</span>
                         </div>
                     </div>
@@ -251,23 +251,23 @@
                         <br />
                         <br />
                         <div class="float-left">
-                            <span class="field-label" title="Starting Pressure Group">SPG</span>
+                            <span class="field-label">SPG</span>
                             <br />
-                            <input type="text" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Starting Pressure Group" id="SPG1" name="SPG1" class="form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <div class="float-right">
-                            <span class="field-label" title="Ending pressure group">EPG</span>
+                            <span class="field-label">EPG</span>
                             <br />
-                            <input type="text" class="form-control form-control-lg input-1-alpha" maxlength="1" />
+                            <input type="text" title="Ending pressure group" class="form-control form-control-lg input-1-alpha" maxlength="1" />
                         </div>
                         <br />
                         <br />
                         <br />
                         <br />
                         <div class="float-left md">
-                            <span class="field-label" title="Max Depth">MD</span>
+                            <span class="field-label">MD</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="4" />
+                            <input type="number" title="Max Depth" class="form-control form-control-lg input-6" maxlength="4" />
                             <span class="field-label">@AppState.Mesurtext</span>
                         </div>
                         <br />
@@ -275,9 +275,9 @@
                         <br />
                         <div class="bt">
                             <br />
-                            <span class="field-label" title="Bottom time (in minutes)">BT</span>
+                            <span class="field-label">BT</span>
                             <br />
-                            <input type="number" class="form-control form-control-lg input-6" maxlength="3" />
+                            <input type="number" title="Bottom time (in minutes)" class="form-control form-control-lg input-6" maxlength="3" />
                             <span class="field-label">minutes</span>
                         </div>
                     </div>
